Yealink template consistency
Changes to make the templates a bit more consistent while also fixing some typos and creating a new variable for the NAT Update setting.

By default, the account.x.nat.udp_update_enable is set to "3" which means to have the phone periodically send NOTIFY messages. This is not the case though on additional accounts. This makes for inconsistent configs that sometimes cause issues with phones ringing.

This fixes the issue while also giving the ability to use a variable to set it.

--- a/resources/templates/provision/yealink/t53w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53w/{$mac}.cfg
@@ -183,8 +183,8 @@ account.1.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.1.nat.udp_update_enable= 3
-account.1.nat.udp_update_time= 30
+account.1.nat.udp_update_enable = {if isset($account.1.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.1.nat.udp_update_time = 30
 account.1.nat.rport= {$yealink_rport}
 
 account.1.dtmf.type= {$yealink_dtmf_type}
@@ -723,8 +723,8 @@ account.2.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.2.nat.udp_update_enable= 3
-account.2.nat.udp_update_time= 30
+account.2.nat.udp_update_enable = {if isset($account.2.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.2.nat.udp_update_time = 30
 account.2.nat.rport= {$yealink_rport}
 
 account.2.dtmf.type= {$yealink_dtmf_type}
@@ -1251,8 +1251,8 @@ account.3.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.3.nat.udp_update_enable= 3
-account.3.nat.udp_update_time= 30
+account.3.nat.udp_update_enable = {if isset($account.3.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.3.nat.udp_update_time = 30
 account.3.nat.rport= {$yealink_rport}
 
 account.3.dtmf.type= {$yealink_dtmf_type}
@@ -1779,8 +1779,8 @@ account.4.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.4.nat.udp_update_enable= 3
-account.4.nat.udp_update_time= 30
+account.4.nat.udp_update_enable = {if isset($account.4.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.4.nat.udp_update_time = 30
 account.4.nat.rport= {$yealink_rport}
 
 account.4.dtmf.type= {$yealink_dtmf_type}
@@ -2306,8 +2306,8 @@ account.5.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.5.nat.udp_update_enable= 3
-account.5.nat.udp_update_time= 30
+account.5.nat.udp_update_enable = {if isset($account.5.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.5.nat.udp_update_time = 30
 account.5.nat.rport= {$yealink_rport}
 
 account.5.dtmf.type= {$yealink_dtmf_type}
@@ -2847,8 +2847,8 @@ account.6.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.6.nat.udp_update_enable= 3
-account.6.nat.udp_update_time= 30
+account.6.nat.udp_update_enable = {if isset($account.6.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.6.nat.udp_update_time = 30
 account.6.nat.rport= {$yealink_rport}
 
 account.6.dtmf.type= {$yealink_dtmf_type}
@@ -3375,8 +3375,8 @@ account.7.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.7.nat.udp_update_enable= 3
-account.7.nat.udp_update_time= 30
+account.7.nat.udp_update_enable = {if isset($account.7.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.7.nat.udp_update_time = 30
 account.7.nat.rport= {$yealink_rport}
 
 account.7.dtmf.type= {$yealink_dtmf_type}
@@ -3903,8 +3903,8 @@ account.8.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.8.nat.udp_update_enable= 3
-account.8.nat.udp_update_time= 30
+account.8.nat.udp_update_enable = {if isset($account.8.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.8.nat.udp_update_time = 30
 account.8.nat.rport= {$yealink_rport}
 
 account.8.dtmf.type= {$yealink_dtmf_type}
@@ -4431,8 +4431,8 @@ account.9.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.9.nat.udp_update_enable= 3
-account.9.nat.udp_update_time= 30
+account.9.nat.udp_update_enable = {if isset($account.9.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.9.nat.udp_update_time = 30
 account.9.nat.rport= {$yealink_rport}
 
 account.9.dtmf.type= {$yealink_dtmf_type}
@@ -4959,8 +4959,8 @@ account.10.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.10.nat.udp_update_enable= 3
-account.10.nat.udp_update_time= 30
+account.10.nat.udp_update_enable = {if isset($account.10.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.10.nat.udp_update_time = 30
 account.10.nat.rport= {$yealink_rport}
 
 account.10.dtmf.type= {$yealink_dtmf_type}
