--- a/resources/templates/provision/yealink/cp960/{$mac}.cfg
+++ b/resources/templates/provision/yealink/cp960/{$mac}.cfg
@@ -143,7 +143,7 @@ account.1.nat.stun_server = {$stun_server}
 account.1.nat.stun_port = {if isset($stun_port)}{$stun_port}{else}3478{/if}
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.1.nat.udp_update_enable = 3
+account.1.nat.udp_update_enable = {if isset($account.1.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.1.nat.udp_update_time = 30
@@ -647,7 +647,7 @@ account.2.nat.stun_server = {$stun_server}
 account.2.nat.stun_port = {if isset($stun_port)}{$stun_port}{else}3478{/if}
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.2.nat.udp_update_enable = 1
+account.2.nat.udp_update_enable = {if isset($account.2.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.2.nat.udp_update_time = 30
@@ -1162,7 +1162,7 @@ account.3.nat.stun_server = {$stun_server}
 account.3.nat.stun_port = {if isset($stun_port)}{$stun_port}{else}3478{/if}
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.3.nat.udp_update_enable = 1
+account.3.nat.udp_update_enable = {if isset($account.3.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.3.nat.udp_update_time = 30
@@ -1661,7 +1661,7 @@ account.4.nat.stun_server = {$stun_server}
 account.4.nat.stun_port = {if isset($stun_port)}{$stun_port}{else}3478{/if}
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.4.nat.udp_update_enable = 1
+account.4.nat.udp_update_enable = {if isset($account.4.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.4.nat.udp_update_time = 30
@@ -2158,7 +2158,7 @@ account.5.nat.stun_server = {$stun_server}
 account.5.nat.stun_port = {if isset($stun_port)}{$stun_port}{else}3478{/if}
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.5.nat.udp_update_enable = 1
+account.5.nat.udp_update_enable = {if isset($account.5.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.5.nat.udp_update_time = 30
@@ -2654,7 +2654,7 @@ account.6.nat.stun_server =
 account.6.nat.stun_port = 3478
 
 #Enable or disable the NAT keep-alive; 0-Disabled, 1-Default (default), 2-Option, 3-Notify;
-account.6.nat.udp_update_enable = 1
+account.6.nat.udp_update_enable = {if isset($account.6.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 #Specify the keep-alive interval (in seconds), the default value is 30.
 account.6.nat.udp_update_time = 30
