--- a/resources/templates/provision/yealink/t46u/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t46u/{$mac}.cfg
@@ -183,8 +183,8 @@ account.1.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.1.nat.udp_update_enable=
-account.1.nat.udp_update_time=
+account.1.nat.udp_update_enable = {if isset($account.1.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.1.nat.udp_update_time = 30
 account.1.nat.rport= {$yealink_rport}
 
 account.1.dtmf.type= {$yealink_dtmf_type}
@@ -746,8 +746,8 @@ account.2.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.2.nat.udp_update_enable=
-account.2.nat.udp_update_time=
+account.2.nat.udp_update_enable = {if isset($account.2.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.2.nat.udp_update_time = 30
 account.2.nat.rport=  {$yealink_rport}
 
 account.2.dtmf.type= {$yealink_dtmf_type}
@@ -1309,8 +1309,8 @@ account.3.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.3.nat.udp_update_enable=
-account.3.nat.udp_update_time=
+account.3.nat.udp_update_enable = {if isset($account.3.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.3.nat.udp_update_time = 30
 account.3.nat.rport= {$yealink_rport}
 
 account.3.dtmf.type= {$yealink_dtmf_type}
@@ -1872,8 +1872,8 @@ account.4.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.4.nat.udp_update_enable=
-account.4.nat.udp_update_time=
+account.4.nat.udp_update_enable = {if isset($account.4.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.4.nat.udp_update_time = 30
 account.4.nat.rport= {$yealink_rport}
 
 account.4.dtmf.type= {$yealink_dtmf_type}
@@ -2435,8 +2435,8 @@ account.5.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.5.nat.udp_update_enable=
-account.5.nat.udp_update_time=
+account.5.nat.udp_update_enable = {if isset($account.5.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.5.nat.udp_update_time = 30
 account.5.nat.rport= {$yealink_rport}
 
 account.5.dtmf.type= {$yealink_dtmf_type}
@@ -2998,8 +2998,8 @@ account.6.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.6.nat.udp_update_enable=
-account.6.nat.udp_update_time=
+account.6.nat.udp_update_enable = {if isset($account.6.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.6.nat.udp_update_time = 30
 account.6.nat.rport= {$yealink_rport}
 
 account.6.dtmf.type= {$yealink_dtmf_type}
