--- a/resources/templates/provision/yealink/t53/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53/{$mac}.cfg
@@ -182,8 +182,8 @@ account.1.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.1.nat.udp_update_enable= 3
-account.1.nat.udp_update_time= 30
+account.1.nat.udp_update_enable = {if isset($account.1.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.1.nat.udp_update_time = 30
 account.1.nat.rport= {$yealink_rport}
 
 account.1.dtmf.type= {$yealink_dtmf_type}
@@ -721,8 +721,8 @@ account.2.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.2.nat.udp_update_enable= 3
-account.2.nat.udp_update_time= 30
+account.2.nat.udp_update_enable = {if isset($account.2.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.2.nat.udp_update_time = 30
 account.2.nat.rport= {$yealink_rport}
 
 account.2.dtmf.type= {$yealink_dtmf_type}
@@ -1248,8 +1248,8 @@ account.3.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.3.nat.udp_update_enable= 3
-account.3.nat.udp_update_time= 30
+account.3.nat.udp_update_enable = {if isset($account.3.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.3.nat.udp_update_time = 30
 account.3.nat.rport= {$yealink_rport}
 
 account.3.dtmf.type= {$yealink_dtmf_type}
@@ -1775,8 +1775,8 @@ account.4.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.4.nat.udp_update_enable= 3
-account.4.nat.udp_update_time= 30
+account.4.nat.udp_update_enable = {if isset($account.4.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.4.nat.udp_update_time = 30
 account.4.nat.rport= {$yealink_rport}
 
 account.4.dtmf.type= {$yealink_dtmf_type}
@@ -2301,8 +2301,8 @@ account.5.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.5.nat.udp_update_enable= 3
-account.5.nat.udp_update_time= 30
+account.5.nat.udp_update_enable = {if isset($account.5.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.5.nat.udp_update_time = 30
 account.5.nat.rport= {$yealink_rport}
 
 account.5.dtmf.type= {$yealink_dtmf_type}
@@ -2841,8 +2841,8 @@ account.6.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.6.nat.udp_update_enable= 3
-account.6.nat.udp_update_time= 30
+account.6.nat.udp_update_enable = {if isset($account.6.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.6.nat.udp_update_time = 30
 account.6.nat.rport= {$yealink_rport}
 
 account.6.dtmf.type= {$yealink_dtmf_type}
@@ -3368,8 +3368,8 @@ account.7.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.7.nat.udp_update_enable= 3
-account.7.nat.udp_update_time= 30
+account.7.nat.udp_update_enable = {if isset($account.7.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.7.nat.udp_update_time = 30
 account.7.nat.rport= {$yealink_rport}
 
 account.7.dtmf.type= {$yealink_dtmf_type}
@@ -3895,8 +3895,8 @@ account.8.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.8.nat.udp_update_enable= 3
-account.8.nat.udp_update_time= 30
+account.8.nat.udp_update_enable = {if isset($account.8.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.8.nat.udp_update_time = 30
 account.8.nat.rport= {$yealink_rport}
 
 account.8.dtmf.type= {$yealink_dtmf_type}
@@ -4422,8 +4422,8 @@ account.9.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.9.nat.udp_update_enable= 3
-account.9.nat.udp_update_time= 30
+account.9.nat.udp_update_enable = {if isset($account.9.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.9.nat.udp_update_time = 30
 account.9.nat.rport= {$yealink_rport}
 
 account.9.dtmf.type= {$yealink_dtmf_type}
@@ -4949,8 +4949,8 @@ account.10.auto_answer=
 ################################################################
 #                      Account Advanced                       ##
 ################################################################
-account.10.nat.udp_update_enable= 3
-account.10.nat.udp_update_time= 30
+account.10.nat.udp_update_enable = {if isset($account.10.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
+account.10.nat.udp_update_time = 30
 account.10.nat.rport= {$yealink_rport}
 
 account.10.dtmf.type= {$yealink_dtmf_type}
