--- a/resources/templates/provision/yealink/t58a/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t58a/{$mac}.cfg
@@ -111,9 +111,9 @@ account.1.reg_fail_retry_interval =
 account.1.nat.nat_traversal = {if isset($stun_server)}1{else}0{/if}
 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.1.nat.udp_update_enable = 3
+account.1.nat.udp_update_enable = {if isset($account.1.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
@@ -576,13 +576,13 @@ account.2.reg_fail_retry_interval =
 ##The default value is 0.
 account.2.nat.nat_traversal = 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.2.nat.udp_update_enable = 
+account.2.nat.udp_update_enable = {if isset($account.2.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
-account.2.nat.udp_update_time = 
+account.2.nat.udp_update_time = 30
 
 ##It enables or disables NAT Rport feature for account X.0-Disabled,1-Enabled
 ##The default value is 0.
@@ -1040,13 +1040,13 @@ account.3.reg_fail_retry_interval =
 account.3.nat.nat_traversal = 
 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.3.nat.udp_update_enable = 
+account.3.nat.udp_update_enable = {if isset($account.3.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
-account.3.nat.udp_update_time = 
+account.3.nat.udp_update_time = 30
 
 ##It enables or disables NAT Rport feature for account X.0-Disabled,1-Enabled
 ##The default value is 0.
@@ -1499,13 +1499,13 @@ account.4.reg_fail_retry_interval =
 ##The default value is 0.
 account.4.nat.nat_traversal = 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.4.nat.udp_update_enable = 
+account.4.nat.udp_update_enable = {if isset($account.4.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
-account.4.nat.udp_update_time = 
+account.4.nat.udp_update_time = 30
 
 ##It enables or disables NAT Rport feature for account X.0-Disabled,1-Enabled
 ##The default value is 0.
@@ -1966,13 +1966,13 @@ account.5.reg_fail_retry_interval =
 account.5.nat.nat_traversal = 
 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.5.nat.udp_update_enable = 
+account.5.nat.udp_update_enable = {if isset($account.5.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
-account.5.nat.udp_update_time = 
+account.5.nat.udp_update_time = 30
 
 ##It enables or disables NAT Rport feature for account X.0-Disabled,1-Enabled
 ##The default value is 0.
@@ -2437,13 +2437,13 @@ account.6.nat.nat_traversal =
 
 
 ##It configures the type of keep-alive packets sent by the phone to the NAT static to keep the communication port open so that NAT can continue to function for account X.
-##0-Dsiabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
+##0-Disabled,1-Default: the phone sends UDP packets to the server,2-Option: the phone sends SIP OPTION packets to the server,3-Notify: the phone sends SIP NOTIFY packets to the server.
 ##The default value is 1.
-account.6.nat.udp_update_enable = 
+account.6.nat.udp_update_enable = {if isset($account.6.password)}{if isset($yealink_udp_update_enable)}{$yealink_udp_update_enable}{else}3{/if}{else}1{/if}{""}
 
 ##It configures the keep-alive interval (in seconds) for account X.
 ##The default value is 30.Integer from 15 to 2147483647
-account.6.nat.udp_update_time = 
+account.6.nat.udp_update_time = 30
 
 ##It enables or disables NAT Rport feature for account X.0-Disabled,1-Enabled
 ##The default value is 0.
